fix spacing card issue in phones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 30px;
 }
 
@@ -23,7 +23,8 @@
 }
 
 .card h3 {
-  margin-bottom: 10px;
+  word-break: normal;
+  white-space: normal;
 }
 
 .card p {
